Fix tab link height (for correct border alignment of navbars and other elements)

--- a/app/styles/au-kaleidos-css/_auk-tabs.scss
+++ b/app/styles/au-kaleidos-css/_auk-tabs.scss
@@ -16,7 +16,7 @@
 .auk-tabs a {
   color: $au-blue-600;
   font-weight: 500;
-  height: 5rem;
+  height: 4.9rem;
   display: flex;
   align-items: center;
   text-decoration: none;
